# Selfuse-invoice-generator

./: .gitignore  CLAUDE.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql  0002_company_settings.sql  0003_customer.sql  0004_numbering_counter.sql  0005_quotation.sql  0006_invoice.sql  0007_payment_voucher.sql  0008_pdf_template.sql  0009_payment_voucher_nullable_invoice.sql  0010_company_settings_entity_type.sql  0011_business_profile.sql  0012_multi_qr_invoice_picker.sql  0013_exchange_rate_cache.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/business_profile/: commands.rs  mod.rs  repository.rs  service.rs  tests.rs  types.rs
src-tauri/src/domain/customer/: commands.rs  mod.rs  repository.rs  service.rs  tests.rs  types.rs
src-tauri/src/domain/invoice/: commands.rs  mod.rs  repository.rs  service.rs  state_machine.rs  tests.rs  types.rs
src-tauri/src/domain/payment_voucher/: commands.rs  mod.rs  repository.rs  service.rs  tests.rs  types.rs
src-tauri/src/domain/pdf_template/: commands.rs  mod.rs  repository.rs  service.rs  tests.rs  types.rs
src-tauri/src/domain/quotation/: commands.rs  mod.rs  repository.rs  service.rs  state_machine.rs  tests.rs  types.rs
src-tauri/src/infra/: db.rs  file_system.rs  mod.rs
src-tauri/src/service/: mod.rs
src-tauri/src/service/backup_restore/: commands.rs  mod.rs  (+1 more)
src-tauri/templates/: preset_invoice.html  preset_payment_voucher.html  preset_quotation.html
(+132 files in other folders)
