[package]
name = "invoice-system"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "invoice_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
ts-rs = { version = "12.0.1", features = ["serde-json-impl"] }
uuid = { version = "1.23.1", features = ["v4"] }
tauri-plugin-window-state = "2.4.1"
tera = "1.20.1"
headless_chrome = "1.0.21"
base64 = "0.22.1"
zip = "2.2.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"

